--- a/src/styles/_zasu.scss
+++ b/src/styles/_zasu.scss
@@ -5,3 +5,17 @@
 .paypal-container {
   width: 300px;
 }
+
+.nimg,
+.video {
+  margin: 0 10px 40px 0;
+}
+
+.images-container {
+  display: flex;
+  padding: 20px 0;
+}
+
+.event {
+  margin: 0 0 50px 0;
+}
