Refactor for new server, remove warnings, and a bunch of other stuff

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -26,6 +26,10 @@ h3 {
   color: #444;
 }
 
+h4 {
+  margin-bottom: 12px;
+}
+
 //----------------------------------------------------------------------------
 //  Form Elements
 //----------------------------------------------------------------------------
@@ -35,6 +39,10 @@ button[type="submit"] {
   border-radius: 4;
   color: white;
   padding: 8px 16px;
+}
+
+form {
+  margin: 50px 0 0 0;
 }
 
 input {
