[WIP] Match user input to applicable classes

--- a/src/styles/_zasu.scss
+++ b/src/styles/_zasu.scss
@@ -25,6 +25,7 @@
   font-family: "Arial", sans-serif;
   grid-gap: 16px;
   grid-template-columns: 1fr 1fr;
+  margin-top: 60px;
 }
 
 .class-card {
