--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,10 +1,12 @@
-@import "_theme";
-
 //----------------------------------------------------------------------------
 //  Body
 //----------------------------------------------------------------------------
 body {
-  font-size: 20px;
+  @include _btStandard();
+  @include _mq(small)   { @include _btS();  };
+  @include _mq(medium)  { @include _btM();  };
+  @include _mq(large)   { @include _btL();  };
+  @include _mq(xlarge)  { @include _btXL(); };
 }
 
 //----------------------------------------------------------------------------
@@ -54,7 +56,7 @@ input {
 //  Paragraphs
 //----------------------------------------------------------------------------
 p {
-  line-height: 32px;
+  // line-height: 32px;
 }
 
 p + p {
