--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,16 +1,17 @@
-@import url("https://fonts.googleapis.com/css?family=Space+Mono:400,700&display=swap");
+//----------------------------------------------------------------------------
+//  Font Sizes
+//----------------------------------------------------------------------------
+$fBase: 16px;
+
+$fSmall  : 0.8rem;
+$fMedium : 1rem;
+$fLarge  : 1.25rem;
+$fXlarge : 5rem;
 
 //----------------------------------------------------------------------------
-//  Colors
+//  Screen Widths
 //----------------------------------------------------------------------------
-$darkBlue: #314566;
-$lightGray: #7a7a7a;
-$darkGray: #444444;
-$darkRed: #8e2020;
-$modal: rgba(25, 25, 25, 0.95);
-
-
-//----------------------------------------------------------------------------
-//  Font Families
-//----------------------------------------------------------------------------
-$bodyFont: "Roboto Mono", monospace;
+$small   : 576px;
+$medium  : 768px;
+$large   : 992px;
+$xlarge  : 1200px;
