--- a/src/layouts/navigation/style.scss
+++ b/src/layouts/navigation/style.scss
@@ -1,6 +1,8 @@
 .y-navigation {
-  background-color: rgb(127, 177, 230);
+  background-color: rgba(255, 255, 255, 0.9);
+  border-bottom: 1px solid #eee;
   padding: 20px 0;
+  position: fixed;
   width: 100%;
 
   a {
