--- a/src/layouts/navigation/style.scss
+++ b/src/layouts/navigation/style.scss
@@ -8,6 +8,7 @@
   a {
     font-size: 14px;
     font-weight: 700px;
+    padding: 0 10px;
   }
 
   .y-navigation__nav-items {
@@ -15,5 +16,9 @@
     justify-content: space-between;
     margin: 0 auto;
     width: 90%;
+  }
+
+  .y-navigation__active {
+    border-bottom: 2px solid crimson;
   }
 }
