Add sticky footer

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,8 +1,12 @@
 .y-wrap {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   position: relative;
 
   .y-wrap__inner {
     margin: 0 auto;
+    padding: 20px 0 40px;
     width: 90%;
   }
 }
