--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@
 @import "./styles/_mixins";
 @import "./styles/_theme";
 @import "./styles/_base";
+@import "./styles/_app";
 @import "./styles/_layout";
 @import "./styles/_vendor";
 @import "./styles/_zasu";
