Implement header height calculation to `<main>` and keep footer docked at bottom even if `<main>` lacks content

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -72,10 +72,6 @@ input {
 //----------------------------------------------------------------------------
 //  Paragraphs
 //----------------------------------------------------------------------------
-p {
-  // line-height: 32px;
-}
-
 p + p {
   margin-top: 22px;
 }
@@ -84,7 +80,8 @@ p + p {
 //  Sectioning Elements
 //----------------------------------------------------------------------------
 main {
+  min-height: 76vh;
   position: relative;
-  // margin-top: 60px;
   z-index: 40;
 }
+
