Update styles for form sections

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,5 +9,6 @@
 @import "./styles/_base";
 @import "./styles/_app";
 @import "./styles/_layout";
+@import "./styles/_form";
 @import "./styles/_vendor";
 @import "./styles/_zasu";
