Distinguish between brief and fully-detailed class cards and hook up payment page

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -43,3 +43,23 @@
     width: 100%;
   }
 }
+
+.signup__verify {
+  background-color: #f5f5f5;
+  margin: 20px 0;
+  padding: 20px;
+  p {
+    margin: 10px;
+  }
+}
+
+.signup__edit {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+
+  button {
+    max-width: 60px;
+    padding: 4px 8px;
+  }
+}
