--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -21,4 +21,10 @@
   display: flex;
   justify-content: center;
   margin: 10px 0;
+
+  &.y-button--extended {
+    button {
+      max-width: 180px;
+    }
+  }
 }
